Filters can generate a partially applied filtering function.

--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,17 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.totallylazy</groupId>
+            <artifactId>totallylazy</artifactId>
+            <version>1.67</version>
+        </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>repo.bodar.com</id>
+            <url>http://repo.bodar.com</url>
+        </repository>
+    </repositories>
 </project>
