--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.manuelp</groupId>
     <artifactId>siftj</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0-SNAPSHOT</version>
 
     <issueManagement>
         <url>https://github.com/manuelp/siftj/issues</url>
