--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.manuelp</groupId>
     <artifactId>siftj</artifactId>
-    <version>2.0.2-SNAPSHOT</version>
+    <version>2.0.2</version>
 
     <issueManagement>
         <url>https://github.com/manuelp/siftj/issues</url>
